# void

./: .gitignore  CMakeLists.txt  CONFIGURING.md  DESIGN.md  LICENSE  README.md  deps.ps1  deps.sh
.github/: CODE_OF_CONDUCT.md
include/: vaudio.hpp  vgraphics.hpp
src/: vgraphics.cpp
